--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "thirdweb": "^5.37.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
