--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pixi/react": "^7.1.2",
     "@pixi/tilemap": "^4.1.0",
     "@thirdweb-dev/react": "^4.9.4",
+    "axios": "^1.7.2",
     "pixi.js": "^7.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
