--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "@pixi/events": "^7.4.2",
     "@pixi/react": "^7.1.2",
     "@pixi/tilemap": "^4.1.0",
